--- a/app.json
+++ b/app.json
@@ -5,13 +5,23 @@
     "REACT_APP_CLIENT_ID": {
       "required": true
     },
-    "REACT_APP_APP_ID": {
+    "REACT_APP_CLOUD_NAME": {
       "required": true
     },
-    "formation": {
-      "web": {
-        "quantity": 1
-      }
+    "REACT_APP_UPLOAD_PRESET": {
+      "required": true
+    },
+    "REACT_APP_FOLDER": {
+      "required": true
+    },
+    "REACT_APP_APP_ID": {
+      "required": true
+    }
+  },
+  "formation": {
+    "web": {
+      "quantity": 1
+    }
   },
   "addons": [],
   "buildpacks": [
@@ -19,5 +29,4 @@
       "url": "heroku/nodejs"
     }
   ]
-}
 }
